# bible-reader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  extract_scripture_only.py  import_worldbibleplans_epub.py  maybe_read_bible.sh  pyproject.toml  read_today.py  requirements.txt  split_plan.py  test_extract_scripture_only.py  test_import_worldbibleplans_epub.py  test_read_today.py  test_split_plan.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
src/bible_reader/: extract_scripture_only.py  import_worldbibleplans_epub.py  maybe_read.py  read_today.py  split_plan.py
tests/: test_extract_scripture_only.py  test_import_worldbibleplans_epub.py  test_read_today.py  test_split_plan.py
