[project]
name = "bible-reader"
version = "2.0.2"
description = "A lightweight terminal workflow for daily Bible reading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["filelock>=3.13,<4", "xdg-base-dirs"]

[project.scripts]
bible-reader = "bible_reader.read_today:main"
maybe-read-bible = "bible_reader.maybe_read:main"
split-plan = "bible_reader.split_plan:main"
extract-scripture = "bible_reader.extract_scripture_only:main"
import-epub = "bible_reader.import_worldbibleplans_epub:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bible_reader"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D", "PT009", "PT027"]
